--- a/homepage-styles.css
+++ b/homepage-styles.css
@@ -23,8 +23,26 @@ nav {
   color: #eceff4;
   text-decoration: none;
   padding: 1rem;
+  margin: 0.3rem;
   font-size: 20px;
   font-weight: 400;
+}
+
+.nav-holder > li > a::after {
+  content: "";
+  position: absolute;
+  /* transform: scaleX(0); */
+  left: 100px;
+  width: 100%;
+  height: 2px;
+  background-color: red;
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+
+.nav-holder > li > a:hover::after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
 }
 
 #logo {
