--- a/homepage-styles.css
+++ b/homepage-styles.css
@@ -24,15 +24,18 @@ nav {
   text-decoration: none;
   padding: 1rem;
   margin: 0.3rem;
+  display: inline-block;
   font-size: 20px;
+  position: relative;
   font-weight: 400;
 }
 
 .nav-holder > li > a::after {
   content: "";
   position: absolute;
-  /* transform: scaleX(0); */
-  left: 100px;
+  transform: scaleX(0);
+  left: 0;
+  bottom: 0;
   width: 100%;
   height: 2px;
   background-color: red;
