--- a/homepage-styles.css
+++ b/homepage-styles.css
@@ -5,12 +5,19 @@
   --navbar: #4c566a;
 }
 
+html {
+  height: 100vh;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
   background-color: var(--primary);
   font-family: "Montserrat", sans-serif;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 nav {
   display: flex;
@@ -70,11 +77,85 @@ nav {
 
   .nav-holder {
     flex-direction: column;
-    padding-block: 1rem;
+    padding-block: 0rem;
     width: 100%;
+    gap: 0.2rem;
   }
 
   .nav-holder > li > a {
     width: 100%;
   }
+}
+
+#about {
+  display: flex;
+  margin: 0 3rem;
+  gap: 5rem;
+  margin-bottom: 3rem;
+}
+
+.body-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding-block: 5rem;
+  flex: 1;
+}
+
+#about-block {
+  border: 1px solid black;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 1rem;
+  aspect-ratio: 1/1;
+  transition: color 0.25s;
+}
+
+#about-paragraph {
+  width: clamp(5rem, 50vw, 60rem);
+  align-self: center;
+}
+
+#about-paragraph > p {
+  text-align: center;
+}
+
+@media (max-width: 915px) {
+  #about {
+    margin: 1rem;
+    gap: 1rem;
+    /* font-size: 12px; */
+  }
+
+  #about-block {
+    font-size: 16px;
+  }
+}
+
+#photos {
+  align-self: center;
+  display: flex;
+  width: 80%;
+  justify-content: space-around;
+  padding: 2rem;
+  border: 2px solid black;
+}
+
+@media (max-width: 1300px) {
+  #photos {
+    flex-direction: column;
+    gap: 1rem;
+    margin-top: 5rem;
+  }
+}
+
+#photos > img {
+  border-radius: 15px;
+}
+
+#beanie-pic::after {
+  content: "test";
 }
