--- a/homepage-styles.css
+++ b/homepage-styles.css
@@ -159,3 +159,17 @@ nav {
 #beanie-pic::after {
   content: "test";
 }
+
+.beanie-container,
+.board-container {
+  width: min-content;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#beanie-caption,
+#board-caption {
+  text-align: center;
+  margin-bottom: 0;
+}
