--- a/homepage-styles.css
+++ b/homepage-styles.css
@@ -162,7 +162,7 @@ nav {
 
 .beanie-container,
 .board-container {
-  width: min-content;
+  /* width: min-content; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -172,4 +172,8 @@ nav {
 #board-caption {
   text-align: center;
   margin-bottom: 0;
+}
+
+img {
+  max-width: 100%;
 }
