--- a/homepage-styles.css
+++ b/homepage-styles.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Raleway:wght@400;500&display=swap");
 html {
   height: 100vh;
   width: 100vw;
@@ -106,9 +105,8 @@ nav {
   flex-wrap: wrap;
 }
 
-#about-block > p {
-  font-weight: 700;
-  font-size: 20px;
+#about-block > h1 {
+  font-size: 2rem;
 }
 
 #about-paragraph {
@@ -118,6 +116,8 @@ nav {
 
 #about-paragraph > p {
   text-align: center;
+  font-weight: 500;
+  font-size: 1.2rem;
 }
 
 @media (max-width: 915px) {
@@ -173,6 +173,7 @@ nav {
 #board-caption {
   text-align: center;
   margin-bottom: 1rem;
+  font-size: 1.1rem;
 }
 
 #beanie-pic,
