--- a/homepage-styles.css
+++ b/homepage-styles.css
@@ -182,3 +182,10 @@ nav {
   border: 2px solid white;
   border-radius: 10px;
 }
+
+footer {
+  display: flex;
+  justify-content: center;
+  padding-block: 0.75rem;
+  background-color: #def3fd;
+}
