--- a/homepage-styles.css
+++ b/homepage-styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Raleway:wght@400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;500;700&family=Raleway:wght@400;500&display=swap");
 html {
   height: 100vh;
   width: 100vw;
@@ -188,4 +188,5 @@ footer {
   justify-content: center;
   padding-block: 0.75rem;
   background-color: #def3fd;
+  font-weight: 200;
 }
