--- a/joinus-styles.css
+++ b/joinus-styles.css
@@ -86,7 +86,7 @@ nav {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  flex: 1;
+  flex-grow: 0.8;
   gap: 2rem;
 }
 
