--- a/beanietutorial-styles.css
+++ b/beanietutorial-styles.css
@@ -85,8 +85,43 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-around;
+  height: 100%;
+  flex: 1;
 }
 
 h2 {
   text-decoration: underline;
+  text-align: center;
+}
+
+ol {
+  counter-reset: list;
+  text-align: center;
+}
+
+ol > li {
+  list-style: none;
+  padding-block: 0.25rem;
+  text-align: left;
+}
+
+ol > li::before {
+  content: counter(list) ".) ";
+  counter-increment: list;
+}
+
+.body-container > a {
+  box-shadow: inset 0 0 0 0 #54b3d6;
+  color: #54b3d6;
+  margin: 0 -0.25rem;
+  padding: 0 0.25rem;
+  transition: color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  text-decoration: none;
+  font-size: 1.15rem;
+  font-weight: 700;
+}
+.body-container > a:hover {
+  box-shadow: inset 20rem 0 0 0 #54b3d6;
+  color: white;
 }
