--- a/beanietutorial-styles.css
+++ b/beanietutorial-styles.css
@@ -79,6 +79,10 @@ nav {
   .nav-holder > li > a {
     width: 100%;
   }
+
+  .body-container > a {
+    margin: 0.5rem 0 !important;
+  }
 }
 
 .body-container {
@@ -109,6 +113,7 @@ ol > li {
 ol > li::before {
   content: counter(list) ".) ";
   counter-increment: list;
+  font-weight: 500;
 }
 
 .body-container > a {
