--- a/contactus-styles.css
+++ b/contactus-styles.css
@@ -81,104 +81,24 @@ nav {
   }
 }
 
-#about {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin-top: 2rem;
-  padding: 0rem;
-}
-
 .body-container {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  align-items: center;
+  justify-content: space-around;
+  height: 80%;
   flex: 1;
-  background-color: white;
 }
 
-#about-block {
-  text-align: center;
+footer {
   display: flex;
-  align-items: center;
   justify-content: center;
-  flex-wrap: wrap;
+  padding-block: 0.75rem;
+  background-color: #def3fd;
+  font-weight: 200;
 }
 
-#about-block > h1 {
-  font-size: 2rem;
-}
-
-#about-paragraph {
-  width: clamp(5rem, 50vw, 60rem);
-  align-self: center;
-}
-
-#about-paragraph > p {
-  text-align: center;
-  font-weight: 500;
-  font-size: 1.2rem;
-}
-
-@media (max-width: 915px) {
-  #about {
-    margin: 1rem;
-    gap: 1rem;
-    /* font-size: 12px; */
-  }
-
-  #about-block {
-    font-size: 16px;
-  }
-}
-
-#photos {
-  align-self: center;
-  display: flex;
-  width: 80%;
-  justify-content: space-evenly;
-  padding: 2rem;
-}
-
-@media (max-width: 1300px) {
-  #photos {
-    flex-direction: column;
-    align-items: center;
-    gap: 1rem;
-    margin-top: 5rem;
-  }
-}
-
-#photos > img {
-  border-radius: 15px;
-  width: 100%;
-  height: auto;
-}
-
-#beanie-pic::after {
-  content: "test";
-}
-
-.beanie-container,
-.board-container {
-  /* width: min-content; */
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 1rem;
-  width: 40%;
-}
-
-#beanie-caption,
-#board-caption {
-  text-align: center;
-  margin-bottom: 1rem;
-  font-size: 1.1rem;
-}
-
-#beanie-pic,
-#board-pic {
-  width: 100%;
-  border: 2px solid white;
-  border-radius: 10px;
+#github {
+  text-decoration: none;
+  color: black;
 }
