--- a/homepage-styles.css
+++ b/homepage-styles.css
@@ -118,6 +118,7 @@ nav {
   text-align: center;
   font-weight: 500;
   font-size: 1.2rem;
+  line-height: 1.75rem;
 }
 
 @media (max-width: 915px) {
