--- a/beanietutorial-styles.css
+++ b/beanietutorial-styles.css
@@ -65,7 +65,7 @@ nav {
 }
 
 @media (max-width: 1000px) {
-  nav {
+  /* nav {
     flex-direction: column;
     align-items: flex-start;
   }
@@ -78,6 +78,44 @@ nav {
 
   .nav-holder > li > a {
     width: 100%;
+  } */
+
+  .nav-holder {
+    position: fixed;
+    /* left: -100%; */
+    top: -100%;
+    flex-direction: column;
+    background-color: #fff;
+    width: 100%;
+    border-radius: 10px;
+    text-align: center;
+    transition: 0.3s;
+    box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
+  }
+
+  .nav-holder.active {
+    top: 10%;
+  }
+
+  ul > li {
+    margin: 2.5rem 0;
+  }
+
+  .hamburger {
+    display: block !important;
+    cursor: pointer;
+  }
+
+  .hamburger.active .bar:nth-child(2) {
+    opacity: 0;
+  }
+
+  .hamburger.active .bar:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+  }
+
+  .hamburger.active .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
   }
 
   .body-container > a {
@@ -133,4 +171,21 @@ ol > li::before {
 .body-container > a:hover {
   box-shadow: inset 20rem 0 0 0 #54b3d6;
   color: white;
+}
+
+.hamburger {
+  display: none;
+  margin-right: 2rem;
+  background-color: transparent;
+  border: none;
+}
+
+.bar {
+  display: block;
+  width: 2rem;
+  height: 3px;
+  margin: 0.3rem;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  background-color: #101010;
 }
