mobile hamburger menu resizing

--- a/homepage-styles.css
+++ b/homepage-styles.css
@@ -19,6 +19,7 @@ nav {
   align-items: center;
   /* background-color: #b9d9eb; */
   background-color: #def3fd;
+  position: relative;
 }
 /* navbar links */
 .nav-holder > li > a {
